# cs-tracker

./: .gitignore  Cargo.toml  README.md
parquet/: 1749134472.parquet  1749200592.parquet  1749207745.parquet  1749223798.parquet  1749289454.parquet  README.md
src/: good_details.rs  good_list.rs  main.rs  writer.rs
