[package]
name = "cs-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.1.0"
parquet = "55.1.0"
reqwest = "0.12.15"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
